--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "build": "tsc",
+    "test": "test",
+    "start": "npm run build && npm run serve",
+    "serve": "node dist/index.js"
   },
   "author": "Nathan Latchaw",
   "license": "ISC",
