--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Nathan Latchaw",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "ws": "^7.5.0"
   },
   "devDependencies": {
