--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "author": "Nathan Latchaw",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^10.0.0",
-    "ws": "^7.5.0"
+    "ws": "^7.5.2"
   },
   "devDependencies": {
-    "@types/ws": "^7.4.5",
-    "typescript": "^4.3.4"
+    "@types/ws": "^7.4.6",
+    "typescript": "^4.3.5"
   }
 }
