--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
         "es2021": true
     },
     "extends": [
-        "standard"
+        "google"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -15,5 +15,10 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "object-curly-spacing": "off",
+        "brace-style": "off",
+        "max-len": "off",
+        "camelcase": "off",
+        "no-invalid-this": "off"
     }
 }
