--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
         "brace-style": "off",
         "max-len": "off",
         "camelcase": "off",
-        "no-invalid-this": "off"
+        "no-invalid-this": "off",
+        "linebreak-style": "off"
     }
 }
